feat arbitration
